:stars: Added Backend URL listing

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"discord_token":"<token>","channel_ids":["874328119929102357","732282806117466166"],"administrators":["Kingkiller_#9608"]}
+{"discord_token":"<token>","channel_ids":["874328119929102357","732282806117466166"],"administrators":["Kingkiller_#9608"],"backend_url": "http://0.0.0.0:3000"}
